--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,3 +1,7 @@
+<%= form_with(url: search_tweets_path, local: true, method: :get, class: "search-form") do |form| %>
+  <%= form.text_field :keyword, placeholder: "投稿を検索する", class: "search-input" %>
+  <%= form.submit "検索", class: "search-btn" %>
+<% end %>
 <div class="contents row">
   <% @tweets.each do |tweet| %>
     <div class="content_post" style="background-image: url(<%= tweet.image %>);">
@@ -7,18 +11,23 @@
           <li>
             <%= link_to '詳細', "/tweets/#{tweet.id}", method: :get %>
           </li>
-          <li>
-            <%= link_to '編集', "/tweets/#{tweet.id}/edit", method: :get %>
-          </li>
-          <li>
-            <%= link_to '削除', "/tweets/#{tweet.id}", method: :delete %>
-          </li>
+          <% if user_signed_in? && current_user.id == tweet.user_id %>
+            <li>
+              <%= link_to '編集', "/tweets/#{tweet.id}/edit", method: :get %>
+            </li>
+            <li>
+              <%= link_to '削除', "/tweets/#{tweet.id}", method: :delete %>
+            </li>
+          <% end %>
         </ul>
       </div>
       <%= simple_format(tweet.text) %>
       <span class="name">
-        <%= tweet.name %>
+        <a href="/users/<%= tweet.user.id %>">
+          <span>投稿者</span><%= tweet.user.nickname %>
+        </a>
       </span>
     </div>
   <% end %>
+  <%= paginate(@tweets) %>
 </div>
